--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,34 +10,33 @@
     tools:layout_editor_absoluteX="0dp">
 
 
-
         <TextView
             android:id="@+id/resultText"
             android:layout_width="348dp"
             android:layout_height="58dp"
-            android:text="@string/name"
+
+            android:layout_marginTop="29dp"
             android:textAlignment="center"
             android:textSize="32sp"
-            android:layout_marginTop="25dp"
+            app:layout_constraintHorizontal_bias="0.428"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/micButton"
             android:layout_width="308dp"
             android:layout_height="363dp"
-            app:srcCompat="@drawable/mic"
-            android:layout_marginLeft="13dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.777"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/resultText"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="1.0" />
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/resultText"
+            app:layout_constraintVertical_bias="0.619"
+            app:srcCompat="@drawable/mic" />
 
 
 
